# src/modules/cars/entities/Specification.ts
@@ -1,9 +1,15 @@
+import { Entity, Column, PrimaryColumn, CreateDateColumn } from "typeorm";
 import { v4 as uuidV4 } from "uuid";
 
+@Entity("specifications")
 export class Specification {
+  @PrimaryColumn()
   id?: string;
+  @Column()
   name: string;
+  @Column()
   description: string;
+  @CreateDateColumn()
   created_at: Date;
 
   constructor() {
