# src/routes/categories.routes.ts
@@ -1,25 +1,25 @@
 import { Router } from "express";
 import multer from "multer";
 
-import createCategoryController from "../modules/cars/useCases/createCategory";
-// import { importCategoryController } from "../modules/cars/useCases/importCategory";
-// import { listAllCategoriesController } from "../modules/cars/useCases/listCategories";
+import { CreateCategoryController } from "../modules/cars/useCases/createCategory/createCategoryController";
+import { ImportCategoryController } from "../modules/cars/useCases/importCategory/ImportCategoryController";
+import { ListAllCategoriesController } from "../modules/cars/useCases/listCategories/listAllCategoriesController";
 
 const categoriesRoutes = Router();
 const upload = multer({
   dest: "./tmp",
 });
 
-categoriesRoutes.post("/", (request, response) => {
-  return createCategoryController().handle(request, response);
-});
+const createCategoryController = new CreateCategoryController();
+const importCategoryController = new ImportCategoryController();
+const listAllCategoriesController = new ListAllCategoriesController();
 
-// categoriesRoutes.get("/", (request, response) => {
-//   return listAllCategoriesController.handle(request, response);
-// });
-
-// categoriesRoutes.post("/import", upload.single("file"), (request, response) => {
-//   importCategoryController.handle(request, response);
-// });
+categoriesRoutes.post("/", createCategoryController.handle);
+categoriesRoutes.get("/", listAllCategoriesController.handle);
+categoriesRoutes.post(
+  "/import",
+  upload.single("file"),
+  importCategoryController.handle
+);
 
 export { categoriesRoutes };
