# src/routes/index.ts
@@ -6,6 +6,6 @@ import { specificationsRoutes } from "./specifications.routes";
 const router = Router();
 
 router.use("/categories", categoriesRoutes);
-// router.use("/specifications", specificationsRoutes);
+router.use("/specifications", specificationsRoutes);
 
 export { router };
