# src/routes/specifications.routes.ts
@@ -1,15 +1,14 @@
 import { Router } from "express";
 
-import { createSpecificationController } from "../modules/cars/useCases/createSpecification";
-import { listAllSpecificationController } from "../modules/cars/useCases/listSpecifications";
+import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/CreateSpecificationController";
+import { ListAllSpecificationsController } from "../modules/cars/useCases/listSpecifications/ListAllSpecificationsController";
 
 const specificationsRoutes = Router();
 
-specificationsRoutes.post("/", (request, response) => {
-  return createSpecificationController.handle(request, response);
-});
+const createSpecificationController = new CreateSpecificationController();
+const listAllSpecificationController = new ListAllSpecificationsController();
 
-specificationsRoutes.get("/", (request, response) => {
-  return listAllSpecificationController.handle(request, response);
-});
+specificationsRoutes.post("/", createSpecificationController.handle);
+
+specificationsRoutes.get("/", listAllSpecificationController.handle);
 export { specificationsRoutes };
